Improved Sodium support + program set handling